# fullstack-fastAPI-reactjs

user-service/back-end/: .gitignore  Dockerfile  Dockerfile.seed  gunicorn.conf.py  pyproject.toml  read.md
user-service/back-end/app/: main.py
user-service/back-end/app/application/: deps.py
user-service/back-end/app/application/schemas/: audit_log.py  auth.py  department.py  role.py  system_config.py  user.py
user-service/back-end/app/application/services/: audit_log_service.py  auth_service.py  config_service.py  data_permission_filter.py  department_service.py  email_template_service.py  password_policy.py  role_service.py  (+2 more)
user-service/back-end/app/core/: config.py  config_cache.py  crypto.py  database.py  exceptions.py  kafka.py  redis_config_cache.py  security.py
user-service/back-end/app/repositories/: audit_log_repository.py  department_repository.py  permission_repository.py  role_repository.py  system_config_repository.py  user_repository.py
user-service/back-end/scripts/: seed.py
user-service/back-end/tests/: conftest.py  test_auth.py  test_cache.py  test_config_cache.py  test_config_group_models.py  test_config_service.py  test_crypto.py  test_data_permission.py  test_department_model.py  test_department_repository.py  test_department_schema.py  test_department_service.py  test_departments_api.py  test_email_template_service.py  test_email_templates_api.py  test_health.py  test_system_config_api.py  test_system_config_model.py  test_system_config_repository.py  test_users.py
user-service/back-end/tests/performance/: k6-login.js  seed_data.py
(+274 files in other folders)
